tests/fail/twice_repeats.stderr
error: `repeats` defined twice
 --> tests/fail/twice_repeats.rs:9:41
  |
9 |     let _wave = sine_wave!(repeats: 10, repeats: 10);
  |                                         ^^^^^^^
